--- a/index.html
+++ b/index.html
@@ -24,15 +24,35 @@
 		</div>
 		Outlook for <select id="outlookID" size="1">
 			<option value="https://www.spc.noaa.gov/products/outlook/day1otlk_0100.gif">Day 1 issue 0100Z (1900 CST)</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day1probotlk_0100_torn.gif">Day 1 0100Z, probabalistic tornado</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day1probotlk_0100_wind.gif">Day 1 0100Z, probabalistic wind</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day1probotlk_0100_hail.gif">Day 1 0100Z, probabalistic hail</option>
 			<option value="https://www.spc.noaa.gov/products/outlook/day1otlk_1200.gif">Day 1 issue 1200Z (0600 CST)</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day1probotlk_1200_torn.gif">Day 1 1200Z, probabalistic tornado</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day1probotlk_1200_wind.gif">Day 1 1200Z, probabalistic wind</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day1probotlk_1200_hail.gif">Day 1 1200Z, probabalistic hail</option>
 			<option value="https://www.spc.noaa.gov/products/outlook/day1otlk_1300.gif">Day 1 issue 1300Z (0700 CST)</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day1probotlk_1300_torn.gif">Day 1 1300Z, probabalistic tornado</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day1probotlk_1300_wind.gif">Day 1 1300Z, probabalistic wind</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day1probotlk_1300_hail.gif">Day 1 1300Z, probabalistic hail</option>
 			<option value="https://www.spc.noaa.gov/products/outlook/day1otlk_1630.gif">Day 1 issue 1630Z (1030 CST)</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day1probotlk_1630_torn.gif">Day 1 1630Z, probabalistic tornado</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day1probotlk_1630_wind.gif">Day 1 1630Z, probabalistic wind</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day1probotlk_1630_hail.gif">Day 1 1630Z, probabalistic hail</option>
 			<option value="https://www.spc.noaa.gov/products/outlook/day1otlk_2000.gif">Day 1 issue 2000Z (1400 CST)</option>
-			<option value="https://www.spc.noaa.gov/products/outlook/day2otlk_0600.gif">Day 2 issue 0600Z (0000 CST)</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day1probotlk_2000_torn.gif">Day 1 2000Z, probabalistic tornado</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day1probotlk_2000_wind.gif">Day 1 2000Z, probabalistic wind</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day1probotlk_2000_hail.gif">Day 1 2000Z, probabalistic hail</option>
 			<option value="https://www.spc.noaa.gov/products/outlook/day2otlk_0700.gif">Day 2 issue 0700Z (0100 CST)</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day2probotlk_0700_torn.gif">Day 2 0700Z, probabalistic tornado</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day2probotlk_0700_wind.gif">Day 2 0700Z, probabalistic wind</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day2probotlk_0700_hail.gif">Day 2 0700Z, probabalistic hail</option>
 			<option value="https://www.spc.noaa.gov/products/outlook/day2otlk_1730.gif">Day 2 issue 1730Z (1130 CST)</option>
-			<option value="https://www.spc.noaa.gov/products/outlook/day3otlk_0730.gif">Day 3 issue 0730Z (0130 CST)</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day2probotlk_1730_torn.gif">Day 2 1730Z, probabalistic tornado</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day2probotlk_1730_wind.gif">Day 2 1730Z, probabalistic wind</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day2probotlk_1730_hail.gif">Day 2 1730Z, probabalistic hail</option>
 			<option value="https://www.spc.noaa.gov/products/outlook/day3otlk_0830.gif">Day 3 issue 0830Z (0230 CST)</option>
+			<option value="https://www.spc.noaa.gov/products/outlook/day3prob_0830.gif">Day 3 0830Z, probabalistic</option>
 			<option value="https://www.spc.noaa.gov/products/exper/day4-8/day4prob.gif">Day 4</option>
 			<option value="https://www.spc.noaa.gov/products/exper/day4-8/day5prob.gif">Day 5</option>
 			<option value="https://www.spc.noaa.gov/products/exper/day4-8/day6prob.gif">Day 6</option>
@@ -45,7 +65,6 @@
 			<option value="https://www.spc.noaa.gov/products/exper/enhtstm/imgs/enh_1600.gif">Thunderstorm, 1600Z to 2000Z</option>
 			<option value="https://www.spc.noaa.gov/products/exper/enhtstm/imgs/enh_2000.gif">Thunderstorm, 2000Z to 0000Z</option>
 		</select><br/>
-		Note that outlooks issued in the future will be the outlooks from yesterday.
 		<div style="width:815px;height:555px;">
 			<img id="outlook" style="position:absolute;" src="https://www.spc.noaa.gov/products/outlook/day1otlk_1300.gif">
 		</div>
