fix thunder and sref

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				var imgwind = document.getElementById("outlookwind");
 				var imghail = document.getElementById("outlookhail");
 				var imgthunder = document.getElementById("outlookthunder");
-				var imgsref = document.getElementById("outlookthunder");
+				var imgsref = document.getElementById("srefImg");
 				var optionsRegular = document.getElementById("outlookRegular");
 				var optionsThunder = document.getElementById("outlookThunder");
 				var optionsSREF = document.getElementById("srefList");
