color for contrast

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
 		<style>
-			body, * {margin:0px;padding:0px;font-family:Courier;}
-			div {padding:0px;margin:0px;border: 1px solid red;}
+			body, * {margin:0px;padding:0px;font-family:Courier;background-color:#000;color:#FFF}
+			div {padding:0px;margin:0px;border: 1px solid red;background-color:#FFF}
 		</style>
 	</head>
 	<body>
@@ -18,7 +18,7 @@
 			</tr>
 		</table>
 		IR map and outlook day 1, overlaid.
-		<div style="width:1024px;height:768px;">
+		<div style="height:768px;">
 			<img style="position:absolute;" src="https://www.spc.noaa.gov/exper/compmap/16.gif">
 			<img style="position:absolute;" src="https://www.spc.noaa.gov/exper/compmap/18.gif">
 		</div>
