--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 				<td><img height="58" alt="Storm Prediction Center" src="https://www.spc.noaa.gov/nwscwi/spc.jpg" width="500" border="0"></td>
 			</tr>
 		</table>
+		<div class="black">
 		IR map and outlook day 1, overlaid.
+		</div>
 		<div style="height:768px;">
 			<img style="position:absolute;" src="https://www.spc.noaa.gov/exper/compmap/16.gif">
 			<img style="position:absolute;" src="https://www.spc.noaa.gov/exper/compmap/18.gif">
