--- a/index.html
+++ b/index.html
@@ -163,6 +163,42 @@
 							imgwind.src = pref + "";
 							imghail.src = pref + "";
 							break;
+						case "4":
+							imgcat.src = pref + "exper/day4-8/day4prob.gif";
+							imgtorn.src = pref + "";
+							imgwind.src = pref + "";
+							imghail.src = pref + "";
+							break;
+						case "5":
+							imgcat.src = pref + "exper/day4-8/day5prob.gif";
+							imgtorn.src = pref + "";
+							imgwind.src = pref + "";
+							imghail.src = pref + "";
+							break;
+						case "6":
+							imgcat.src = pref + "exper/day4-8/day6prob.gif";
+							imgtorn.src = pref + "";
+							imgwind.src = pref + "";
+							imghail.src = pref + "";
+							break;
+						case "7":
+							imgcat.src = pref + "exper/day4-8/day7prob.gif";
+							imgtorn.src = pref + "";
+							imgwind.src = pref + "";
+							imghail.src = pref + "";
+							break;
+						case "8":
+							imgcat.src = pref + "exper/day4-8/day8prob.gif";
+							imgtorn.src = pref + "";
+							imgwind.src = pref + "";
+							imghail.src = pref + "";
+							break;
+						case "4-8":
+							imgcat.src = pref + "exper/day4-8/day48prob.gif";
+							imgtorn.src = pref + "";
+							imgwind.src = pref + "";
+							imghail.src = pref + "";
+							break;
 					}
 				}
 				imgthunder.src = "https://www.spc.noaa.gov/products/exper/enhtstm/imgs/enh_"+optionsThunder.value+".gif";
