--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<style>
+			body {background-color:#000;}
 			body, * {margin:0px;padding:0px;font-family:Courier;}
 			div {padding:0px;margin:0px;border: 1px solid red;}
 			div.black {background-color:#000;color:#FFF;}
