--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div class="black">
 		Outlook for <select id="outlookRegular" size="1">
 			<option value="1-0100">Day 1 issue 0100Z (1900 CST)</option>
-			<option value="1-1200">Day 1 issue 1200Z (0600 CST)</option>
+			<option value="1-0600">Day 1 issue 0600Z (0000 CST)</option>
 			<option value="1-1300">Day 1 issue 1300Z (0700 CST)</option>
 			<option value="1-1630">Day 1 issue 1630Z (1030 CST)</option>
 			<option value="1-2000">Day 1 issue 2000Z (1400 CST)</option>
@@ -122,7 +122,7 @@
 							imgwind.src = pref + "outlook/day1probotlk_0100_wind.gif";
 							imghail.src = pref + "outlook/day1probotlk_0100_hail.gif";
 							break;
-						case "1-1200":
+						case "1-0600": // The 0600Z images use URLs of 1200Z images.
 							imgcat.src = pref + "outlook/day1otlk_1200.gif";
 							imgtorn.src = pref + "outlook/day1probotlk_1200_torn.gif";
 							imgwind.src = pref + "outlook/day1probotlk_1200_wind.gif";
