--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 			body {background-color:#000;}
 			body, * {margin:0px;padding:0px;font-family:Courier;}
 			div {padding:0px;margin:0px;border: 1px solid red;}
-			div.black {background-color:#000;color:#FFF;}
+			select, option, label {background-color:#000;color:#FFF;}
 		</style>
 	</head>
 	<body>
@@ -12,21 +12,21 @@
 			<tr>
 				<td rowspan="2"><img src="https://www.spc.noaa.gov/nwscwi/noaaleft.jpg" alt="NOAA logo-Select to go to the NOAA homepage" width="85" height="78" border="0" /></td>
 				<td><img src="https://www.spc.noaa.gov/nwscwi/noaa_nws_title.jpg" width="500" height="20" border="0" alt="NOAA's National Weather Service"></td>
-				<td rowspan="2" width="100%" background="https://www.spc.noaa.gov/nwscwi/ncep_bkgrnd.jpg">This website compiled by notquitehadouken<br/>ALL images from <a href="https://spc.noaa.gov">spc.noaa.gov</a></td>
+				<td rowspan="2" width="100%" background="https://www.spc.noaa.gov/nwscwi/ncep_bkgrnd.jpg">This website compiled by notquitehadouken<br/>Images from <a href="https://noaa.gov">noaa.gov</a></td>
 				<td rowspan="2" align="right"><img src="https://www.spc.noaa.gov/nwscwi/nwsright.jpg" alt="Select to go to the NWS homepage" width="85" height="78" border="0" /></td>
 			</tr>
 			<tr>
 				<td><img height="58" alt="Storm Prediction Center" src="https://www.spc.noaa.gov/nwscwi/spc.jpg" width="500" border="0"></td>
 			</tr>
 		</table>
-		<div class="black">
+		<label>
 		IR map and outlook day 1, overlaid.
-		</div>
+		</label>
 		<div style="height:768px;">
 			<img style="position:absolute;" src="https://www.spc.noaa.gov/exper/compmap/16.gif">
 			<img style="position:absolute;" src="https://www.spc.noaa.gov/exper/compmap/18.gif">
 		</div>
-		<div class="black">
+		<label>
 		Outlook for <select id="outlookRegular" size="1">
 			<option value="1-0100">Day 1 issue 0100Z (1900 CST)</option>
 			<option value="1-0600">Day 1 issue 0600Z (0000 CST)</option>
@@ -43,27 +43,27 @@
 			<option value="8">Day 8</option>
 			<option value="4-8">Days 4-8</option>
 		</select>
-		</div>
+		</label>
 		<div>
-			<img id="outlookcat" src="https://www.spc.noaa.gov/products/outlook/day1otlk_1300.gif">
-			<img id="outlooktorn" src="https://www.spc.noaa.gov/products/outlook/day1probotlk_1300_torn.gif">
-			<img id="outlookwind" src="https://www.spc.noaa.gov/products/outlook/day1probotlk_1300_wind.gif">
-			<img id="outlookhail" src="https://www.spc.noaa.gov/products/outlook/day1probotlk_1300_hail.gif">
+			<img id="catImg" src="https://www.spc.noaa.gov/products/outlook/day1otlk_1300.gif">
+			<img id="tornImg" src="https://www.spc.noaa.gov/products/outlook/day1probotlk_1300_torn.gif">
+			<img id="windImg" src="https://www.spc.noaa.gov/products/outlook/day1probotlk_1300_wind.gif">
+			<img id="hailImg" src="https://www.spc.noaa.gov/products/outlook/day1probotlk_1300_hail.gif">
 		</div>
-		<div class="black">
-		Tornado outlook for <select id="outlookThunder" size="1">
+		<label>
+		Tornado outlook for
+		</label> <select id="outlookThunder" size="1">
 			<option value="0000">0000Z to 0400Z</option>
 			<option value="0400">0400Z to 1200Z</option>
 			<option value="1200">1200Z to 1600Z</option>
 			<option value="1600">1600Z to 2000Z</option>
 			<option value="2000">2000Z to 0000Z</option>
 		</select>
-		</div>
 		<div>
-			<img id="outlookthunder" src="https://www.spc.noaa.gov/products/exper/enhtstm/imgs/enh_0000.gif">
+			<img id="thunderImg" src="https://www.spc.noaa.gov/products/exper/enhtstm/imgs/enh_0000.gif">
 		</div>
-		<div class="black">
-		SREF <select id="srefList" size="1">
+		<label>SREF</label>
+		<select id="srefList" size="1">
 			<option value="f000">F000</option>
 			<option value="f003">F003</option>
 			<option value="f006">F006</option>
@@ -95,20 +95,38 @@
 			<option value="f084">F084</option>
 			<option value="f087">F087</option>
 		</select>
-		</div>
 		<div>
 			<img id="srefImg" src="https://www.spc.noaa.gov/exper/sref/gifs/latest/SREF_H5__f000.gif">
+		</div>
+		<label>WPC Final forecasts</label>
+		<table>
+			<tr>
+				<td><input type="radio" name="WpcForeIn" value="04" checked="true"><label>4 in</label></td>
+				<td><input type="radio" name="WpcForeDay" value="day1" checked="true"><label>Day 1</label></td>
+			</tr>
+			<tr>
+				<td><input type="radio" name="WpcForeIn" value="08"><label>8 in</label></td>
+				<td><input type="radio" name="WpcForeDay" value="day2"><label>Day 2</label></td>
+			</tr>
+			<tr>
+				<td><input type="radio" name="WpcForeIn" value="12"><label>12 in</label></td>
+				<td><input type="radio" name="WpcForeDay" value="day3"><label>Day 3</label></td>
+			</tr>
+		</table>
+		<div>
+			<img id="WpcForeImg" src="https://www.wpc.ncep.noaa.gov/wwd/day1_psnow_gt_04_conus.gif">
 		</div>
 		
 		<script>
 			var last = ""
 			var pref = "https://www.spc.noaa.gov/products/"
-			var imgcat = document.getElementById("outlookcat");
-			var imgtorn = document.getElementById("outlooktorn");
-			var imgwind = document.getElementById("outlookwind");
-			var imghail = document.getElementById("outlookhail");
-			var imgthunder = document.getElementById("outlookthunder");
+			var imgcat = document.getElementById("catImg");
+			var imgtorn = document.getElementById("tornImg");
+			var imgwind = document.getElementById("windImg");
+			var imghail = document.getElementById("hailImg");
+			var imgthunder = document.getElementById("thunderImg");
 			var imgsref = document.getElementById("srefImg");
+			var imgsnow = document.getElementById("WpcForeImg");
 			var optionsRegular = document.getElementById("outlookRegular");
 			var optionsThunder = document.getElementById("outlookThunder");
 			var optionsSREF = document.getElementById("srefList");
@@ -203,7 +221,20 @@
 					}
 				}
 				imgthunder.src = "https://www.spc.noaa.gov/products/exper/enhtstm/imgs/enh_"+optionsThunder.value+".gif";
-				imgsref.src = "https://www.spc.noaa.gov/exper/sref/gifs/latest/SREF_H5__"+srefList.value+".gif";
+				imgsref.src = "https://www.spc.noaa.gov/exper/sref/gifs/latest/SREF_H5__"+optionsSREF.value+".gif";
+				let foredayelems = document.getElementsByName("WpcForeDay");
+				for (var i=0; i < foredayelems.length; i++){
+					if (foredayelems[i].checked){
+						var snowDay = foredayelems[i].value;
+					}
+				}
+				let foreinelems = document.getElementsByName("WpcForeIn");
+				for (var i=0; i < foreinelems.length; i++){
+					if (foreinelems[i].checked){
+						var snowIn = foreinelems[i].value;
+					}
+				}
+				imgsnow.src = "https://www.wpc.ncep.noaa.gov/wwd/" + snowDay + "_psnow_gt_" + snowIn + "_conus.gif";
 			},10);
 		</script>
 	</body>
