--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<style>
 			body {background-color:#000;}
 			body, * {margin:0px;padding:0px;font-family:Courier;}
-			div {padding:0px;margin:0px;border: 1px solid red;}
+			div {padding:0px;margin:0px;border: 1px solid red;width:1px;}
 			select, option, label {background-color:#000;color:#FFF;}
 		</style>
 	</head>
